--- a/base/prometheus/prom-agent-config.yaml
+++ b/base/prometheus/prom-agent-config.yaml
@@ -104,7 +104,7 @@ data:
     # ✅ 5) Remote Write: 중앙 Prometheus로 전송
     ###############################################################
     remote_write:
-      - url: "http://192.168.1.233:9090/api/v1/write"
+      - url: "afc92fad93b284bde93e1b7d4bc8c8a0-1120332621.ap-northeast-2.elb.amazonaws.com/api/v1/write"
         queue_config:
           max_shards: 8
           capacity: 20000
