--- a/base/prometheus/prom-agent-deployment.yaml
+++ b/base/prometheus/prom-agent-deployment.yaml
@@ -15,6 +15,10 @@ spec:
       labels:
         app: prom-agent
     spec:
+      securityContext:
+        runAsUser: 65534
+        runAsGroup: 65534
+        fsGroup: 65534
       serviceAccountName: prom-agent
       containers:
         - name: prometheus-agent
