--- a/base/efkstack/fluentd-statefulset.yaml
+++ b/base/efkstack/fluentd-statefulset.yaml
@@ -13,6 +13,8 @@ spec:
     metadata:
       labels:
         app: fluentd-aggregator
+      annotations:
+        checksum/config: "{{ .Files.GetSHA256 \"fluentd-config.yaml\" }}"
     spec:
       terminationGracePeriodSeconds: 30
       containers:
