--- a/base/prometheus/kustomization.yaml
+++ b/base/prometheus/kustomization.yaml
@@ -5,3 +5,9 @@ resources:
   - prom-agent-deployment.yaml
   - prom-agent-pvc.yaml
   - prom-agent-rbac.yaml
+configMapGenerator:
+  - name: prom-agent-config
+    files:
+      - prometheus.yml=prom-agent-config.yaml
+    options:
+      disableNameSuffixHash: false
